fix breadcrumb spacing issue

--- a/scss/_links.scss
+++ b/scss/_links.scss
@@ -13,6 +13,7 @@
     content: "";
     background-image: url(../img/bg-pattern-mobile.png);
     background-repeat: no-repeat;
+    background-size: cover;
     position: absolute;
     top: 0;
     bottom: 0;
