--- a/scss/_text-elements.scss
+++ b/scss/_text-elements.scss
@@ -61,9 +61,14 @@
 		box-sizing: content-box;
 		margin: 0 1.25rem;
 		padding: 1.5rem 0 0;
+
 		@include media($bp-md) {
-			margin: 0 auto;
+			margin: 0 2.5rem;
 			max-width: 916px;
+		}
+
+		@include media(1100px) {
+			margin: 0 auto;
 		}
 
 		@include media($bp-xl) {
